--- a/plugin/index.html
+++ b/plugin/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Hello World PC!
-    <script src="plugin/NoMobileVersionPlugin.js"></script>
+    <script src="NoMobileVersionPlugin.js"></script>
 </body>
 </html>
